crates/gitpurge-cli/tests/snapshots/cli_snapshots__backup_list.snap
---
source: crates/gitpurge-cli/tests/cli_snapshots.rs
expression: stdout
---
+----------------------------+---------------------------------------+-----------+------------+----------+
| SNAPSHOT ID                | CREATED AT                            | TRIGGER   | REFS COUNT | VERIFIED |
+========================================================================================================+
| [ULID] | [DATETIME] | PreDelete | 1          | yes      |
+----------------------------+---------------------------------------+-----------+------------+----------+
