crates/gitpurge-cli/tests/snapshots/cli_snapshots__diff_stat_human.snap
---
source: crates/gitpurge-cli/tests/cli_snapshots.rs
expression: stdout
---

0 files changed, 0 insertions(+), 0 deletions(-)
