crates/gitpurge-cli/tests/snapshots/cli_snapshots__plan_human.snap
---
source: crates/gitpurge-cli/tests/cli_snapshots.rs
expression: stdout
---
Plan (dry-run) · action=Delete · age≤default · pre-op backup: WOULD create
+-+-+-+-+-+
| ACTION | REF | REASON | LAST COMMIT | MERGED? |
+=+
| DELETE | merged-branch | Branch is merged and unprotected | [AGE] by Test Author | yes |
+-+-+-+-+-+
1 to delete, 0 to archive · run with --execute to apply
