crates/gitpurge-cli/tests/snapshots/cli_snapshots__plan_json.snap
---
source: crates/gitpurge-cli/tests/cli_snapshots.rs
expression: stdout
---
{"command":"plan","data":{"actions":[{"branch":"merged-branch","classification":{"activity":"Active","age":{"nanos":[NANOS],"secs":[SECONDS]},"branch":"merged-branch","merge_state":"Merged","naming":{"NonStandard":{"reason":"NoCategoryPrefix"}},"protection":"Unprotected","recommendation":"DeleteMerged","remote":null,"scope":"Local","tip":{"author":{"email":"test@example.com","name":"Test Author","when":[2026,183,12,0,0,0,0,0,0]},"author_date":[2026,183,12,0,0,0,0,0,0],"commit_date":[2026,183,12,0,0,0,0,0,0],"committer":{"email":"test@example.com","name":"Test Author","when":[2026,183,12,0,0,0,0,0,0]},"oid":"[COMMIT_SHA_40]","parents":["[COMMIT_SHA_40]"],"short":"[COMMIT_SHA_7]","subject":"Merged branch commit"},"tracking":{"ahead":0,"behind":0,"compared_against":"DefaultBranch","upstream_gone":false},"upstream":null},"kind":"Delete","reason":"Branch is merged and unprotected","remote":null,"scope":"Local"}],"repo":"test-repo","skipped_count":2,"summary":"Plan: 1 actions to execute, 2 skipped"},"dry_run":true,"error":null,"ok":true,"repo":"test-repo","schema_version":"1","warnings":[]}
