crates/gitpurge-cli/tests/snapshots/cli_snapshots__repo_add_success.snap
---
source: crates/gitpurge-cli/tests/cli_snapshots.rs
expression: stdout
---
Added repo 'test-repo' → [REPO_DIR] (default branch: auto-detect)
