crates/gitpurge-cli/tests/snapshots/cli_snapshots__repo_list_empty.snap
---
source: crates/gitpurge-cli/tests/cli_snapshots.rs
expression: stdout
---
No repositories tracked yet. Run `git-purge repo add <path-or-url>` to track one.
