crates/gitpurge-cli/tests/snapshots/cli_snapshots__repo_list_with_repo.snap
---
source: crates/gitpurge-cli/tests/cli_snapshots.rs
expression: stdout
---
+-+-+-+-+-+
| ID | NAME | LOCATION | DEFAULT | BRANCHES |
+=+
| test-repo | Test Repository | [REPO_DIR] | auto-detect | - |
+-+-+-+-+-+
